--- a/style/styles.css
+++ b/style/styles.css
@@ -42,10 +42,14 @@ margin: 5px;
 body {
     height:100%;
     background-color: #141D2121;
-    font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
     padding: 0;
     margin: 0;
 }
+
+body, .page-footer {
+    font: 1.1em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
 section {
     height: 100%
 }
@@ -61,5 +65,4 @@ section {
     text-align: center;
     color: #fff;
     padding: 20px;
-    font: 1.1em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
 }
