--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     height:100%;
     box-sizing: border-box;
@@ -28,6 +33,7 @@ margin: 5px;
 
 .logger {
     text-align: center;
+    border: 1px solid lightslategrey;
 }
 
 .logger h3 {
