--- a/client/src/style/styles.css
+++ b/client/src/style/styles.css
@@ -3,32 +3,11 @@
     padding: 0;
 }
 
-html {
-    height:100%;
-    box-sizing: border-box;
-}
-
-/* * {
-    box-sizing: inherit;
-
-header {
-    background-color: dimgray;
-    padding: 0;
-    margin: 0;
-    border: 0;
-} */
-
-.page-header {
-    padding: 0;
-    margin: 0;
-    border: 0;
+.header {
     text-align: center;
     color: #fff;
     background-color: rgb(64, 60, 63);
-}
-
-.page-header h1 {
-margin: 5px;
+    padding: 0.5rem;
 }
 
 .logger {
@@ -54,10 +33,6 @@ body {
 
 body, .footer {
     font: 1.1em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-}
-
-section {
-    height: 100%
 }
 
 .footer {
